--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 .intro-title {
+    position: relative;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    z-index: 1;
+}
+
+.progress-left, .progress-made, .intro-title, h2 {
+    font-family: 'Piedra', cursive;
+    letter-spacing: 2px;
+}
+p, button {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .game-area {
     width: 500px;
     background-color: lightgoldenrodyellow;
     padding: 10px;
-    height: 95vh;
+    /* height: 95vh; */
     margin: auto;
 }
 p {
+    position: relative;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -20,13 +31,15 @@ button {
     position: relative;
     margin: 5px auto;
     width: 100%;
-    height: 30px;
+    font-size: 15px;
+    padding: 5px;
     border: solid 2px;
 }
 button:hover {
-    border-color: darkcyan;
+    border-color: rgb(26, 197, 197);
     border-radius: 5px;
     top: -1px;
+    box-shadow: 1px 1px 1px rgb(65, 63, 63);
 }
 
 .death-method {
@@ -34,27 +47,32 @@ button:hover {
     color: white;
 }
 
-@media only screen and (max-width: 500px) {
-    .game-area {
-      width: 90%;
-      margin: auto;
-    }
-    button {
-        height: auto;
-    }
-  }
+/*  Hud Start */
+.hud {
+    display: none;
+    z-index: 1;
+}
 
+.stats {
+    text-align: center;
+}
 
+h3 {
+    display: inline;
+    margin: 10px;
+}
+
+/* Progress Bar */
 .progress {
     position: relative;
     display: block;
+    z-index: 1;
     top: 10px;
 }
 .progress-left, .progress-made {
     position: relative;
     height: 40px;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
 }
 .progress-left {
@@ -68,12 +86,14 @@ button:hover {
     width: 00%;
     background-color: rgba(144, 238, 144, .6);
 }
+/* Hud End */
 
-.stats {
-    text-align: center;
-}
-
-h3 {
-    display: inline;
-    margin: 10px;
-}
+@media only screen and (max-width: 500px) {
+    .game-area, .page {
+      width: 90%;
+      margin: auto;
+    }
+    button {
+        height: auto;
+    }
+  }
